# DifyBaziWorkflow

./: .env.example  .gitignore  BaziHuangLiAssistantPrompt.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  agent.md  apiExtract.py  apiSampleRespone.json  check_kbd.rs  check_type.rs  check_types.rs  telegramBot.service
.artifacts/: implementation_plan.md  project_architectural_review.md
DifyTelegramBot/: .env  DEPLOYMENT.md  requirements.txt  telegramBot.py  telegramBot.service  test_apiExtract.py
migrations/: 20260330000001_initial_setup.sql
prompts/: UserBazi.md
src/: calendar.rs  config.rs  db.rs  handlers.rs  llm_bazi.rs  logger.rs  main.rs  paipan.rs  scheduler.rs  state.rs
webapp/: timepicker.html
